--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -23,17 +23,13 @@ pipeline {
             }
             steps {
                 sh 'printenv | egrep "(^HOME|^PATH|^STKFMM_ROOT|^MKLROOT|^LD_LIBRARY_PATH|^pvfmm_DIR|^MKL_THREADING_LAYER|^LC_ALL|^CXX_FLAGS_)"'
-                sh 'python3 -m pip install --user .'
+                sh 'python3 -m pip install --user ".[tests]"'
                 sh 'git submodule update --init'
                 sh 'cmake -B build . -DCMAKE_BUILD_TYPE=Release \
                     -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -DBLAS_LIBRARIES=$MKLROOT/lib/intel64/libmkl_rt.so \
                     -DLAPACK_LIBRARIES=$MKLROOT/lib/intel64/libmkl_rt.so -GNinja'
                 sh 'ninja -C build'
-                sh """
-cd examples/stokes_tests/fiber_const_force
-./gen_config.py
-$PYPATH/skelly_precompute
-"""
+                sh 'PATH=$PYPATH:$PWD/build:$PATH python3 -m pytest tests'
             }
         }
     }
