testing: add cmake tests for kernel implementations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,8 +92,6 @@ add_subdirectory(extern/trng4 EXCLUDE_FROM_ALL)
 add_executable(skelly_sim src/core/skelly_sim.cpp)
 set_property(TARGET skelly_sim PROPERTY CUDA_ARCHITECTURES "70;75;80")
   
-add_subdirectory(tests/core)
-
 target_link_libraries(skelly_sim PUBLIC skelly z MPI::MPI_CXX trng4_static
   ${Kokkos_LIBRARIES} ${Tpetra_LIBRARIES} ${Teuchos_LIBRARIES} ${Belos_LIBRARIES})
 
@@ -103,3 +101,6 @@ configure_file(module_template.in module)
 install(TARGETS skelly_sim
   CONFIGURATIONS Release
   RUNTIME DESTINATION bin)
+
+enable_testing()
+add_subdirectory(tests/core)
