--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -20,6 +20,7 @@ pipeline {
                 MKL_THREADING_LAYER = "GNU"
                 PVFMM_DIR = "/usr/local/share/pvfmm"
                 LD_LIBRARY_PATH = "/opt/intel/oneapi/mkl/latest/lib/intel64:/usr/local/lib"
+                OMP_NUM_THREADS = "4"
             }
             steps {
                 sh 'printenv | egrep "(^HOME|^PATH|^STKFMM_ROOT|^MKLROOT|^LD_LIBRARY_PATH|^pvfmm_DIR|^MKL_THREADING_LAYER|^LC_ALL|^CXX_FLAGS_|&PVFMM_DIR)"'
