--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -23,13 +23,13 @@ pipeline {
                 OMP_NUM_THREADS = "4"
             }
             steps {
-                sh 'printenv | egrep "(^HOME|^PATH|^STKFMM_ROOT|^MKLROOT|^LD_LIBRARY_PATH|^pvfmm_DIR|^MKL_THREADING_LAYER|^LC_ALL|^CXX_FLAGS_|&PVFMM_DIR)"'
+                sh 'printenv | egrep "(^HOME|^PATH|^STKFMM_ROOT|^MKLROOT|^LD_LIBRARY_PATH|^pvfmm_DIR|^MKL_THREADING_LAYER|^LC_ALL|^CXX_FLAGS_|^PVFMM_DIR|^OMP_NUM_THREADS)"'
                 sh 'python3 -m pip install --user ".[tests]"'
                 sh 'git submodule update --init'
                 sh 'cmake -B build . -DCMAKE_BUILD_TYPE=Release \
                     -DCMAKE_CXX_FLAGS="$CXXFLAGS_" -DBLAS_LIBRARIES=$MKLROOT/lib/intel64/libmkl_rt.so \
                     -DLAPACK_LIBRARIES=$MKLROOT/lib/intel64/libmkl_rt.so -GNinja'
-                sh 'ninja -C build'
+                sh 'ninja -C build -j 8'
                 sh 'cd build && ctest --output-on-failure'
                 sh 'PATH=$PYPATH:$PWD/build:$PATH python3 -m pytest tests --verbose'
             }
