cmake: make commands more consistent and prevent gtest install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,8 @@ message("SkellySim version: v${SKELLYSIM_VERSION} (${SKELLYSIM_COMMIT})")
 project(
   skelly_sim
   VERSION ${SKELLYSIM_VERSION}
-  LANGUAGES CXX CUDA)
+  LANGUAGES CXX CUDA
+)
 
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 option(EIGEN_USE_BLAS "Use BLAS as the backend for various Eigen calls" ON)
@@ -71,7 +72,7 @@ set(SKELLY_INCLUDES_SYSTEM
   ${Tpetra_INCLUDE_DIRS}
   ${Teuchos_INCLUDE_DIRS}
   ${Belos_INCLUDE_DIRS}
-  )
+)
 
 file(GLOB LIB_SRC src/core/*.cpp src/core/*.cu)
 add_library(skelly OBJECT
@@ -84,24 +85,33 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 set(INSTALL_RPATH_USE_LINK_PATH TRUE)
 target_include_directories(skelly PUBLIC ${SKELLY_INCLUDES})
 target_include_directories(skelly SYSTEM PUBLIC ${SKELLY_INCLUDES_SYSTEM})
-#target_link_libraries(skelly PUBLIC ${STKFMM_LIBRARIES} ${PVFMM_LIB_DIR}/${PVFMM_STATIC_LIB} ${PVFMM_DEP_LIB} OpenMP::OpenMP_CXX)
-target_link_libraries(skelly PUBLIC ${STKFMM_LIBRARIES} ${PVFMM_LIB_DIR}/${PVFMM_STATIC_LIB} ${PVFMM_DEP_LIB} OpenMP::OpenMP_CXX z MPI::MPI_CXX trng4_static
-    ${Kokkos_LIBRARIES} ${Tpetra_LIBRARIES} ${Teuchos_LIBRARIES} ${Belos_LIBRARIES})
+target_link_libraries(skelly PUBLIC
+  ${STKFMM_LIBRARIES}
+  ${PVFMM_LIB_DIR}/${PVFMM_STATIC_LIB}
+  ${PVFMM_DEP_LIB}
+  OpenMP::OpenMP_CXX
+  z
+  MPI::MPI_CXX
+  trng4_static
+  ${Kokkos_LIBRARIES}
+  ${Tpetra_LIBRARIES}
+  ${Teuchos_LIBRARIES}
+  ${Belos_LIBRARIES}
+)
 
 add_subdirectory(extern/spdlog EXCLUDE_FROM_ALL)
 add_subdirectory(extern/trng4 EXCLUDE_FROM_ALL)
 
 add_executable(skelly_sim src/skelly_sim.cpp)
-  
-target_link_libraries(skelly_sim PUBLIC skelly z MPI::MPI_CXX trng4_static
-  ${Kokkos_LIBRARIES} ${Tpetra_LIBRARIES} ${Teuchos_LIBRARIES} ${Belos_LIBRARIES})
-
+target_link_libraries(skelly_sim PRIVATE skelly)
 
 configure_file(misc/module_template.in module)
 
-install(TARGETS skelly_sim
+install(
+  TARGETS skelly_sim
   CONFIGURATIONS Release
-  RUNTIME DESTINATION bin)
+  RUNTIME DESTINATION bin
+)
 
 enable_testing()
 add_custom_target(test_all ALL)
