--- a/tests/core/CMakeLists.txt
+++ b/tests/core/CMakeLists.txt
@@ -18,13 +18,16 @@ endforeach()
 ###############################################################################
 # Fetch google test
 ###############################################################################
+set(INSTALL_GTEST OFF)
 include(FetchContent)
 FetchContent_Declare(
-    googletest
-    GIT_REPOSITORY  https://github.com/google/googletest.git
-    GIT_TAG         release-1.12.1
-    )
-# Do the same Windows preventing override from MuNDy
+  googletest
+  GIT_REPOSITORY  https://github.com/google/googletest.git
+  GIT_TAG         release-1.12.1
+)
+
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+# https://chromium.googlesource.com/external/github.com/pwnall/googletest/+/HEAD/googletest/README.md
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
