core: NON WORKING version of the triangulated surfaces. right now gives the wrong quadrature weights.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     'dataclass_utils',
     'nptyping',
     'function_generator@git+https://github.com/blackwer/function_generator@fda8b44b5edf15d1677ca7433139a43778d6659d',
+    'trimesh',
 ]
 
 [project.optional-dependencies]
