core: working on chebyshev representation for fibers, need derivative matrices without using automatic differentiation

--- a/tests/core/unit_tests/CMakeLists.txt
+++ b/tests/core/unit_tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set(TEST_LIST
   unit_test_fibercontainer_finite_difference
   unit_test_serialization
   unit_test_body_ellipsoidal
+  unit_test_skelly_chebyshev
 )
 
 # Setup the MPI testing environment for the MPI tests
