--- a/tests/core/unit_tests/CMakeLists.txt
+++ b/tests/core/unit_tests/CMakeLists.txt
@@ -6,6 +6,7 @@ set(TEST_LIST
   unit_test_body_ellipsoidal
   unit_test_skelly_chebyshev
   unit_test_fiber_chebyshev_constraint
+  unit_test_fiber_chebyshev_constraint_autodiff
 )
 
 # Setup the MPI testing environment for the MPI tests
